main.tf
provider "aws" {
  version = "~> 2.0"
  region  = "us-east-1"
}

provider "aws" {
  alias   = "us-east-2"
  version = "~> 2.0"
  region  = "us-east-2"
}

resource "aws_instance" "dev" {
  count         = 3
  ami           = "ami-04505e74c0741db8d"
  instance_type = "t2.micro"
  key_name      = "terraform-aws"

  tags = {
    Name = "dev${count.index}"
  }

  vpc_security_group_ids = ["${aws_security_group.acesso-ssh.id}", "sg-0cbce4d4050554cc9"]
}

resource "aws_s3_bucket" "dev4" {
  bucket = "pedr0arouca-dev4"
  acl    = "private"

  tags = {
    Name = "dev4"
  }
}

resource "aws_instance" "dev4" {
  ami           = "ami-04505e74c0741db8d"
  instance_type = "t2.micro"
  key_name      = "terraform-aws"

  tags = {
    Name = "dev4"
  }

  vpc_security_group_ids = ["${aws_security_group.acesso-ssh.id}", "sg-0cbce4d4050554cc9"]

  depends_on = [
    aws_s3_bucket.dev4
  ]
}

resource "aws_instance" "dev5" {
  ami           = "ami-04505e74c0741db8d"
  instance_type = "t2.micro"
  key_name      = "terraform-aws"

  tags = {
    Name = "dev5"
  }

  vpc_security_group_ids = ["${aws_security_group.acesso-ssh.id}", "sg-0cbce4d4050554cc9"]
}

resource "aws_instance" "dev6" {
  provider      = aws.us-east-2
  ami           = "ami-0c6a6b0e75b2b6ce7"
  instance_type = "t2.micro"
  key_name      = "terraform-aws"

  tags = {
    Name = "dev6"
  }

  vpc_security_group_ids = ["${aws_security_group.acesso-ssh-us-east-2.id}", "sg-0cbce4d4050554cc9"]
}
